table spacing issues + order

--- a/css/ccap-microbiology.css
+++ b/css/ccap-microbiology.css
@@ -3134,26 +3134,6 @@ div.table {
   padding: 0;
   border: none;
 }
-div.table .cnx-figure-horizontal .informalfigure .caption {
-  text-align: center;
-}
-div.table .cnx-figure-horizontal .informalfigure .caption * {
-  font-weight: normal;
-  font-family: Liberation Serif, serif, STIXGeneral, STIXSizeOneSym, STIXSize1;
-}
-div.table.column-header tbody td:first-child {
-  background-color: #7291cb;
-  font-size: 9pt;
-  color: #ffffff;
-  text-align: center;
-  vertical-align: initial;
-}
-div.table:not(.unnumbered) table thead tr:first-of-type th {
-  border: none !important;
-  background-color: transparent;
-  color: #354da1;
-  font-weight: bold;
-}
 div.table table {
   page-break-inside: avoid;
   margin: auto;
@@ -3179,6 +3159,13 @@ div.table table caption {
 div.table table caption::before {
   color: #e6661f;
   font-weight: bold;
+}
+div.table table .cnx-figure-horizontal .informalfigure .caption {
+  text-align: center;
+}
+div.table table .cnx-figure-horizontal .informalfigure .caption * {
+  font-weight: normal;
+  font-family: Liberation Serif, serif, STIXGeneral, STIXSizeOneSym, STIXSize1;
 }
 div.table table thead {
   border-top: none;
@@ -3305,12 +3292,18 @@ div.table.multiple-headers table tr table thead tr:only-child .tablecell {
 div.table.multiple-headers table tr table td {
   padding: 10px;
 }
-.cnx-figure-horizontal .informalfigure .caption {
+div.table.column-header tbody td:first-child {
+  background-color: #7291cb;
+  font-size: 9pt;
+  color: #ffffff;
   text-align: center;
+  vertical-align: initial;
 }
-.cnx-figure-horizontal .informalfigure .caption * {
-  font-weight: normal;
-  font-family: Liberation Serif, serif, STIXGeneral, STIXSizeOneSym, STIXSize1;
+div.table:not(.unnumbered) table thead tr:first-of-type th {
+  border: none !important;
+  background-color: transparent;
+  color: #354da1;
+  font-weight: bold;
 }
 /* ---------------------------------------------------
  * Custom Equation (Non) Numbering
