--- a/css/refactor/themes/science-skeleton.less
+++ b/css/refactor/themes/science-skeleton.less
@@ -799,32 +799,13 @@ div.book div.chapter > div.section div.example div.exercise .commentary {
 /******************************************************************************
  * Tables
  ******************************************************************************/
-
 div.table {
   // First, reset div.table so it just goes away. Apply styling to the actual
   // table element.
   margin: 0 auto;
   padding: 0;
   border: none;
-
-  // TODO: Investigate this. Figures in a table?
-  .cnx-figure-horizontal .informalfigure .caption {
-    text-align: center; //center subfigure caption
-    * {
-      font-weight: normal; //override strong tag
-      font-family: @font-family-serif;
-    }
-  }
-  &.column-header tbody td:first-child  {
-    #content>#table>#data>.style('header'; any);
-  }
-    &:not(.unnumbered) table {
-    thead tr:first-of-type th {
-      #content>#table>#header>#title>.text(any; any);
-    }
-  }
   table {
-
     #content>#table>.style(any; any);
     caption {
       #content>#table>#caption>.style(any; any);
@@ -832,6 +813,13 @@ div.table {
         #content>#table>#caption>.number(any; any);
       }
     }
+  .cnx-figure-horizontal .informalfigure .caption {
+    text-align: center; //center subfigure caption
+    * {
+      font-weight: normal; //override strong tag
+      font-family: @font-family-serif;
+    }
+  }
     // caption + tbody > tr:first-child > td.tablecell {
     //   border-top: none;
     // }
@@ -864,10 +852,20 @@ ul.itemizedlist, ol.orderedlist {
 
   // Special colored table...
   &.color {
-    th { #content>#table>#header>.style(colored; any); }
-    tr { #content>#table>#row>.style(colored; any); }
-    tr td:first-child { background-color: @light-orange; width: 2.5in; font-weight: bold; }
+    th {
+      #content>#table>#header>.style(colored; any);
+    }
+    tr {
+      #content>#table>#row>.style(colored; any);
+    }
+    tr td:first-child {
+      background-color: @light-orange;
+      width: 2.5in;
+      font-weight: bold;
+    }
   }
+
+  //no borders, left aligned, no color change
   &.unstyled {
       table {
         #content>#table>.style(unstyled; any);
@@ -878,30 +876,30 @@ ul.itemizedlist, ol.orderedlist {
           #content>#table>#row>.style(unstyled; any);
         }
         td {
-        #content>#table>#data>.style(unstyled; any);
-      }
-      tbody {
-        #content>#table>#body>.style(unstyled; any);
+          #content>#table>#data>.style(unstyled; any);
+        }
+        tbody {
+          #content>#table>#body>.style(unstyled; any);
       }
     }
   }
 
+  //nested tables with header rows within
   &.multiple-headers {
     table {
       #content>#table>.style(multiple-headers; any);
-
       tbody {
         #content>#table>#body>.style(multiple-headers; any);
       }
       tr {
         #content>#table>#row>.style(multiple-headers; any);
       }
-     td {
-      #content>#table>#data>.style(multiple-headers; any);
+      td {
+        #content>#table>#data>.style(multiple-headers; any);
       }
       tr table {
        thead tr .tablecell {
-        #content>#table>#header>.style(multiple-header; table);
+          #content>#table>#header>.style(multiple-header; table);
         }
         tbody {
           #content>#table>#body>.style(multiple-headers; table);
@@ -918,15 +916,18 @@ ul.itemizedlist, ol.orderedlist {
       }
     }
   }
-}
 
-.cnx-figure-horizontal .informalfigure .caption {
-  text-align: center; //center subfigure caption
-  * {
-    font-weight: normal; //override strong tag
-    font-family: @font-family-serif;
+  //left column displays as a table head.
+  &.column-header tbody td:first-child  {
+    #content>#table>#data>.style('header'; any);
+  }
+  &:not(.unnumbered) table {
+    thead tr:first-of-type th {
+      #content>#table>#header>#title>.text(any; any);
+    }
   }
 }
+
 
 /* ---------------------------------------------------
  * Custom Equation (Non) Numbering
